crates/solidity/testing/snapshots/bindings_output/using/elementary_arrays/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[input.sol:5:1]
   │
 5 │ ╭─▶ using {first} for uint[];
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ function first(uint[] memory values) returns (uint) {
   │          ──┬──               ───┬──  
   │            ╰───────────────────────── def: 1
   │                                 │    
   │                                 ╰──── def: 2
 2 │     return values[0];
   │            ───┬──  
   │               ╰──── ref: 2
───╯
